--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.13",
-    "expo-constants": "~15.4.5",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.44.1",
+    "expo": "^51.0.16",
+    "expo-constants": "^16.0.2",
+    "expo-linking": "^6.3.1",
+    "expo-router": "^3.5.17",
+    "expo-status-bar": "^1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "^0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-dom": "18.2.0",
+    "react-native": "^0.74.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
