--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.44.1",
     "expo": "^51.0.17",
-    "expo-constants": "^16.0.2",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-linking": "^6.3.1",
+    "expo-notifications": "~0.28.9",
     "expo-router": "^3.5.17",
     "expo-status-bar": "^1.12.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "nativewind": "^2.0.11",
+    "paper": "^0.12.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.2",
+    "react-native": "^0.74.3",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-native-toast-notifications": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
